--- a/EMapNavigator/EMapNavigator.csproj
+++ b/EMapNavigator/EMapNavigator.csproj
@@ -93,6 +93,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MapVisualization\MapVisualization.csproj">
+      <Project>{e4d20511-9feb-4102-bee2-208b124c60c4}</Project>
+      <Name>MapVisualization</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
