Научился отрисовывать "поляну" из смежных тайлов любого масштаба  + Добавлена зависимость от проекта Geographics с полезными классами для работы с географическими координатами  + Теперь элементы карты могут отрисовывать себя в "глобальных" экранных координатах, что потом компенсируется при помощи глобальной трансформации сдвига  + Тайлы карты теперь имеют привязку к координатам и отображаются на своих местах  + Переход к множеству тайлов  ~ Не понятно, как в таких условиях производить выбор показываемых на экране объектов  ~ Как-то не красиво получается, что масштаб передаётся всюду

--- a/EMapNavigator/EMapNavigator.csproj
+++ b/EMapNavigator/EMapNavigator.csproj
@@ -94,6 +94,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Geographics\Geographics.csproj">
+      <Project>{4eaf91df-7a6c-4f0e-b15b-f372ce42c8d0}</Project>
+      <Name>Geographics</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MapVisualization\MapVisualization.csproj">
       <Project>{e4d20511-9feb-4102-bee2-208b124c60c4}</Project>
       <Name>MapVisualization</Name>
