--- a/EMapNavigator/EMapNavigator.csproj
+++ b/EMapNavigator/EMapNavigator.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="KilometerPostMapElement.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -89,6 +90,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="Щербинка_1.gps">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -97,6 +101,10 @@
     <ProjectReference Include="..\Geographics\Geographics.csproj">
       <Project>{4eaf91df-7a6c-4f0e-b15b-f372ce42c8d0}</Project>
       <Name>Geographics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GMapElements\GMapElements.csproj">
+      <Project>{87d32b78-3566-4d13-9b15-2b369e04a325}</Project>
+      <Name>GMapElements</Name>
     </ProjectReference>
     <ProjectReference Include="..\MapVisualization\MapVisualization.csproj">
       <Project>{e4d20511-9feb-4102-bee2-208b124c60c4}</Project>
