Элемент управления MapView вынесен в отдельный проект, и добавлен в качестве подмодуля. Отныне все предидущие коммиты не работают.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "GMapElements"]
 	path = GMapElements
 	url = https://github.com/NpoSaut/netGMapElements.git
+[submodule "MapViewControl"]
+	path = MapViewControl
+	url = https://github.com/NpoSaut/netMapViewControlLib.git
