--- a/EMapNavigator/EMapNavigator.csproj
+++ b/EMapNavigator/EMapNavigator.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Emulation\CanWheel.cs" />
     <Compile Include="MapElements\KilometerPostMapElement.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -103,6 +104,22 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Can\AppiDrvWinusb\AppiDrvWinusb.csproj">
+      <Project>{758C61BC-7BE1-4E25-BE05-3A17619199EE}</Project>
+      <Name>AppiDrvWinusb</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Can\AppiWorking\AppiWorking.csproj">
+      <Project>{5A812723-E98B-4B82-AE7B-8E2747D8541F}</Project>
+      <Name>AppiWorking</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Can\BlokFrames\BlokFrames.csproj">
+      <Project>{405B0F26-46EE-4D8C-9267-652F7D4C4AB0}</Project>
+      <Name>BlokFrames</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Can\Communications\Communications.csproj">
+      <Project>{6C5B1ECA-5187-4F63-8CF1-C17DF50D0F65}</Project>
+      <Name>Communications</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Geographics\Geographics.csproj">
       <Project>{4eaf91df-7a6c-4f0e-b15b-f372ce42c8d0}</Project>
       <Name>Geographics</Name>
@@ -120,6 +137,7 @@
       <Name>Tracking</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
