--- a/EMapNavigator/EMapNavigator.csproj
+++ b/EMapNavigator/EMapNavigator.csproj
@@ -92,14 +92,19 @@
     <Compile Include="Emulation\IWheel.cs" />
     <Compile Include="Emulation\VirtualWheel.cs" />
     <Compile Include="Emulation\VirtualWheelFactory.cs" />
-    <Compile Include="MapElements\MapObjectElements\MapObjectElement.cs" />
-    <Compile Include="MapElements\MapObjectElements\MapPlatformElement.cs" />
-    <Compile Include="MapElements\MapObjectElements\MapTrafficLightElement.cs" />
-    <Compile Include="MapElements\MapObjectElements\MapUnknownObjectElement.cs" />
-    <Compile Include="Modules\MainModule.cs" />
-    <Compile Include="Modules\UnityContainerModule.cs" />
+    <Compile Include="Modules\BlokMapEmulatorServicesModule.cs" />
+    <Compile Include="Modules\MainInterfaceModule.cs" />
+    <Compile Include="Modules\MappingInterfaceModule.cs" />
+    <Compile Include="Modules\MappingServicesModule.cs" />
+    <Compile Include="ViewModels\MapViewModel.cs" />
     <Compile Include="ViewModels\WheelViewModel.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
+    <Compile Include="Views\BlokMapEmulatorView.xaml.cs">
+      <DependentUpon>BlokMapEmulatorView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MapView.xaml.cs">
+      <DependentUpon>MapView.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -109,11 +114,18 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Emulation\CanWheel.cs" />
-    <Compile Include="MapElements\KilometerPostMapElement.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\BlokMapEmulatorView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\MapView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MapElements\MapMarkerElement.cs" />
@@ -141,17 +153,15 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <None Include="Maps\Екатеринбург.gps">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="Maps\Щербинка.gps">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BlokMap\BlokMap.csproj">
+      <Project>{23739518-611C-45A5-AE6F-258D2846E1C9}</Project>
+      <Name>BlokMap</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Can\AppiDrvWinusb\AppiDrvWinusb.csproj">
       <Project>{758C61BC-7BE1-4E25-BE05-3A17619199EE}</Project>
       <Name>AppiDrvWinusb</Name>
@@ -179,6 +189,10 @@
     <ProjectReference Include="..\MapViewControl\MapVisualization.csproj">
       <Project>{e4d20511-9feb-4102-bee2-208b124c60c4}</Project>
       <Name>MapVisualization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MapViewer.Shared\MapViewer.Shared.csproj">
+      <Project>{4B6E0840-94A8-4CCD-AAB8-C4C24383229E}</Project>
+      <Name>MapViewer.Shared</Name>
     </ProjectReference>
     <ProjectReference Include="..\Tracking\Tracking.csproj">
       <Project>{D8EA3F6F-A88B-475A-89DF-3B1CA6C5AD8D}</Project>
