--- a/MapViewer.Shared/MapViewer.Shared.csproj
+++ b/MapViewer.Shared/MapViewer.Shared.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Mapping\IMappingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharedModule.cs" />
+    <Compile Include="UnityContainerInterfaceModule.cs" />
     <Compile Include="UnityContainerModule.cs" />
   </ItemGroup>
   <ItemGroup>
