--- a/EMapNavigator/EMapNavigator.csproj
+++ b/EMapNavigator/EMapNavigator.csproj
@@ -115,11 +115,6 @@
     <Compile Include="Emition\CanEmitter.cs" />
     <Compile Include="Emition\LanEmitter.cs" />
     <Compile Include="Emition\IEmitter.cs" />
-    <Compile Include="Emulation\CanWheelFactory.cs" />
-    <Compile Include="Emulation\IWheelFactory.cs" />
-    <Compile Include="Emulation\IWheel.cs" />
-    <Compile Include="Emulation\VirtualWheel.cs" />
-    <Compile Include="Emulation\VirtualWheelFactory.cs" />
     <Compile Include="Modules\BlokMapEmulatorServicesModule.cs" />
     <Compile Include="Modules\MainInterfaceModule.cs" />
     <Compile Include="Modules\MappingInterfaceModule.cs" />
@@ -141,7 +136,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Emulation\CanWheel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -216,6 +210,10 @@
     <ProjectReference Include="..\MapViewControl\MapVisualization.csproj">
       <Project>{e4d20511-9feb-4102-bee2-208b124c60c4}</Project>
       <Name>MapVisualization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MapViewer.Emulation\MapViewer.Emulation.csproj">
+      <Project>{45DBB5B9-9527-4394-AD47-59EE02BD0E5E}</Project>
+      <Name>MapViewer.Emulation</Name>
     </ProjectReference>
     <ProjectReference Include="..\MapViewer.Shared\MapViewer.Shared.csproj">
       <Project>{4B6E0840-94A8-4CCD-AAB8-C4C24383229E}</Project>
