--- a/MapViewer.Emulation/MapViewer.Emulation.csproj
+++ b/MapViewer.Emulation/MapViewer.Emulation.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D8EA3F6F-A88B-475A-89DF-3B1CA6C5AD8D}</ProjectGuid>
+    <ProjectGuid>{45DBB5B9-9527-4394-AD47-59EE02BD0E5E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tracking</RootNamespace>
-    <AssemblyName>Tracking</AssemblyName>
+    <RootNamespace>MapViewer.Emulation</RootNamespace>
+    <AssemblyName>MapViewer.Emulation</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -96,31 +96,19 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Formatters\GpxTrackFormatter.cs" />
-    <Compile Include="Formatters\ITrackFormatter.cs" />
-    <Compile Include="GpsTrack.cs" />
-    <Compile Include="IPathRider.cs" />
-    <Compile Include="MapElements\MapTrackElement.cs" />
-    <Compile Include="Modules\TrackingInterfaceModule.cs" />
-    <Compile Include="Modules\TrackingServicesModule.cs" />
-    <Compile Include="Presenting\ITrackPresenter.cs" />
-    <Compile Include="Presenting\TrackPresenter.cs" />
+    <Compile Include="Modules\EmulationBasicsInterfaceModule.cs" />
+    <Compile Include="Modules\EmulationBasicsServicesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TrackRider.cs" />
-    <Compile Include="ViewModels\TrackingControlViewModel.cs" />
-    <Compile Include="Views\TrackingControlView.xaml.cs">
-      <DependentUpon>TrackingControlView.xaml</DependentUpon>
+    <Compile Include="ViewModels\SpeedControlViewModel.cs" />
+    <Compile Include="Views\SpeedControlView.xaml.cs">
+      <DependentUpon>SpeedControlView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Wheels\IWheel.cs" />
+    <Compile Include="Wheels\IWheelFactory.cs" />
+    <Compile Include="Wheels\VirtualWheel.cs" />
+    <Compile Include="Wheels\VirtualWheelFactory.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Geographics\Geographics.csproj">
-      <Project>{4EAF91DF-7A6C-4F0E-B15B-F372CE42C8D0}</Project>
-      <Name>Geographics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MapViewControl\MapVisualization.csproj">
-      <Project>{E4D20511-9FEB-4102-BEE2-208B124C60C4}</Project>
-      <Name>MapVisualization</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MapViewer.Shared\MapViewer.Shared.csproj">
       <Project>{4B6E0840-94A8-4CCD-AAB8-C4C24383229E}</Project>
       <Name>MapViewer.Shared</Name>
@@ -130,9 +118,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Views\TrackingControlView.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Views\SpeedControlView.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
