--- a/MsulEmulation/MsulEmulation.csproj
+++ b/MsulEmulation/MsulEmulation.csproj
@@ -97,9 +97,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Emit\IMsulEmitter.cs" />
+    <Compile Include="Emit\MsulEmitterHelper.cs" />
+    <Compile Include="Emit\UdpMsulEmitter.cs" />
+    <Compile Include="Encoding\IMsulMessageEncoder.cs" />
+    <Compile Include="Encoding\MsulMessageEncoder.cs" />
     <Compile Include="Entities\CarriageKind.cs" />
     <Compile Include="Modules\MsulEmulationInterfaceModule.cs" />
     <Compile Include="Modules\MsulEmulationServicesModule.cs" />
+    <Compile Include="MsulEmulationSource.cs" />
+    <Compile Include="MsulMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MsulEmulationParametersViewModel.cs" />
     <Compile Include="ViewModels\CarriageParametersViewModel.cs" />
@@ -133,11 +140,20 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Geographics\Geographics.csproj">
+      <Project>{4EAF91DF-7A6C-4F0E-B15B-F372CE42C8D0}</Project>
+      <Name>Geographics</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MapViewer.Emulation\MapViewer.Emulation.csproj">
+      <Project>{45DBB5B9-9527-4394-AD47-59EE02BD0E5E}</Project>
+      <Name>MapViewer.Emulation</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MapViewer.Shared\MapViewer.Shared.csproj">
       <Project>{4B6E0840-94A8-4CCD-AAB8-C4C24383229E}</Project>
       <Name>MapViewer.Shared</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
