Поездки по треку

--- a/MsulEmulation/MsulEmulation.csproj
+++ b/MsulEmulation/MsulEmulation.csproj
@@ -152,6 +152,10 @@
       <Project>{4B6E0840-94A8-4CCD-AAB8-C4C24383229E}</Project>
       <Name>MapViewer.Shared</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Tracking\Tracking.csproj">
+      <Project>{D8EA3F6F-A88B-475A-89DF-3B1CA6C5AD8D}</Project>
+      <Name>Tracking</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
