Переход к началу трека после его открытия

--- a/MapViewer.Shared/MapViewer.Shared.csproj
+++ b/MapViewer.Shared/MapViewer.Shared.csproj
@@ -80,6 +80,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Geographics\Geographics.csproj">
+      <Project>{4EAF91DF-7A6C-4F0E-B15B-F372CE42C8D0}</Project>
+      <Name>Geographics</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MapViewControl\MapVisualization.csproj">
       <Project>{E4D20511-9FEB-4102-BEE2-208B124C60C4}</Project>
       <Name>MapVisualization</Name>
