подменён IBlokEmitter для UDP-эмуляции

--- a/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
+++ b/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
@@ -100,7 +100,10 @@
   <ItemGroup>
     <Compile Include="Can\IAppiDeviceFactory.cs" />
     <Compile Include="Can\SingletonAppiDeviceFactory.cs" />
-    <Compile Include="IBlokEmitter.cs" />
+    <Compile Include="Emission\CanBlokEmitter.cs" />
+    <Compile Include="Emission\IBlokEmitter.cs" />
+    <Compile Include="Emission\NavigationInformation.cs" />
+    <Compile Include="Emission\UdpBlokEmitter.cs" />
     <Compile Include="Modules\BlokEmulationInterfaceModule.cs" />
     <Compile Include="Modules\BlokEmulationServicesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
