--- a/MapViewer.Shared/MapViewer.Shared.csproj
+++ b/MapViewer.Shared/MapViewer.Shared.csproj
@@ -73,6 +73,7 @@
     <Compile Include="InterfaceElements\ToolbarCommandGroup.cs" />
     <Compile Include="Mapping\IMappingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\Interfaces\IMapBehaviorSettings.cs" />
     <Compile Include="SharedModule.cs" />
     <Compile Include="UnityContainerInterfaceModule.cs" />
     <Compile Include="UnityContainerModule.cs" />
