--- a/MapViewer.Emulation.Msul/MapViewer.Emulation.Msul.csproj
+++ b/MapViewer.Emulation.Msul/MapViewer.Emulation.Msul.csproj
@@ -99,10 +99,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Emit\EmissionLink.cs" />
     <Compile Include="Emit\IMsulEmitter.cs" />
+    <Compile Include="Emit\IMsulEmitterProvider.cs" />
     <Compile Include="Emit\MsulEmitterHelper.cs" />
     <Compile Include="Emit\UdpMsulEmitter.cs" />
+    <Compile Include="Emit\UdpMsulEmitterProvider.cs" />
     <Compile Include="Encoding\IMsulMessageEncoder.cs" />
+    <Compile Include="Encoding\InitializationKind.cs" />
     <Compile Include="Encoding\MsulMessageEncoder.cs" />
     <Compile Include="Entities\CarriageKind.cs" />
     <Compile Include="Modules\MsulEmulationInterfaceModule.cs" />
@@ -110,8 +114,10 @@
     <Compile Include="MsulEmulationSource.cs" />
     <Compile Include="MsulMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Settings\IMsulEmulationSettings.cs" />
     <Compile Include="ViewModels\MsulEmulationParametersViewModel.cs" />
     <Compile Include="ViewModels\CarriageParametersViewModel.cs" />
+    <Compile Include="ViewModels\MsulEmulationSettingsViewModel.cs" />
     <Compile Include="ViewModels\MsulEmulationViewModel.cs" />
     <Compile Include="Views\CarriageParametersModel.xaml.cs">
       <DependentUpon>CarriageParametersModel.xaml</DependentUpon>
@@ -119,6 +125,9 @@
     <Compile Include="Views\Controls\Carriage.cs" />
     <Compile Include="Views\MsulEmulationParametersView.xaml.cs">
       <DependentUpon>MsulEmulationParametersView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MsulEmulationSettingsView.xaml.cs">
+      <DependentUpon>MsulEmulationSettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MsulEmulationView.xaml.cs">
       <DependentUpon>MsulEmulationView.xaml</DependentUpon>
@@ -134,6 +143,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\MsulEmulationParametersView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\MsulEmulationSettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
