--- a/MapViewer.Shared/MapViewer.Shared.csproj
+++ b/MapViewer.Shared/MapViewer.Shared.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\Interfaces\IMapAppearanceSettings.cs" />
     <Compile Include="Settings\Interfaces\IMapBehaviorSettings.cs" />
+    <Compile Include="Settings\Interfaces\ISettings.cs" />
     <Compile Include="SharedModule.cs" />
     <Compile Include="UnityContainerInterfaceModule.cs" />
     <Compile Include="UnityContainerModule.cs" />
