--- a/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
+++ b/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
@@ -110,7 +110,7 @@
     <Compile Include="Emission\EmissionOptionAttribute.cs" />
     <Compile Include="Emission\IBlokEmitter.cs" />
     <Compile Include="Emission\IBlokEmitterFactory.cs" />
-    <Compile Include="Emission\Implementations\CanBlockEmitterFactory.cs" />
+    <Compile Include="Emission\Implementations\CanBlokEmitterFactory.cs" />
     <Compile Include="Emission\Implementations\CanBlokEmitter.cs" />
     <Compile Include="Emission\Implementations\UdpBlokEmitter.cs" />
     <Compile Include="Emission\Implementations\UdpBlokEmitterFactory.cs" />
