--- a/MapViewer.Shared/MapViewer.Shared.csproj
+++ b/MapViewer.Shared/MapViewer.Shared.csproj
@@ -83,6 +83,7 @@
     <Compile Include="InterfaceElements\IToolbarCommandGroup.cs" />
     <Compile Include="InterfaceElements\ToolbarCommand.cs" />
     <Compile Include="InterfaceElements\ToolbarCommandGroup.cs" />
+    <Compile Include="IWindowTitleManager.cs" />
     <Compile Include="Mapping\IMappingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\Interfaces\IMapAppearanceSettings.cs" />
