--- a/MapViewer.Shared/MapViewer.Shared.csproj
+++ b/MapViewer.Shared/MapViewer.Shared.csproj
@@ -78,11 +78,6 @@
     <Compile Include="Environment\IStartupArgumentsProvider.cs" />
     <Compile Include="Environment\StartupArgumentsProviderHelper.cs" />
     <Compile Include="Geocoding\IGeocodingService.cs" />
-    <Compile Include="InterfaceElements\InterfaceElementsRegistrationHelper.cs" />
-    <Compile Include="InterfaceElements\IToolbarCommand.cs" />
-    <Compile Include="InterfaceElements\IToolbarCommandGroup.cs" />
-    <Compile Include="InterfaceElements\ToolbarCommand.cs" />
-    <Compile Include="InterfaceElements\ToolbarCommandGroup.cs" />
     <Compile Include="IWindowTitleManager.cs" />
     <Compile Include="Mapping\IMappingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -91,7 +86,6 @@
     <Compile Include="SharedModule.cs" />
     <Compile Include="UnityContainerInterfaceModule.cs" />
     <Compile Include="UnityContainerModule.cs" />
-    <Compile Include="ViewModels\ISpeedControlViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Geographics\Geographics.csproj">
@@ -106,7 +100,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
