--- a/MapViewer.Emulation/MapViewer.Emulation.csproj
+++ b/MapViewer.Emulation/MapViewer.Emulation.csproj
@@ -98,8 +98,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="INavigator.cs" />
     <Compile Include="Modules\EmulationBasicsInterfaceModule.cs" />
     <Compile Include="Modules\EmulationBasicsServicesModule.cs" />
+    <Compile Include="NavigationInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\SpeedControlViewModel.cs" />
     <Compile Include="Views\SpeedControlView.xaml.cs">
