--- a/MapViewer.Emulation/MapViewer.Emulation.csproj
+++ b/MapViewer.Emulation/MapViewer.Emulation.csproj
@@ -99,13 +99,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="INavigator.cs" />
+    <Compile Include="INavigatorConfig.cs" />
     <Compile Include="Modules\EmulationBasicsInterfaceModule.cs" />
     <Compile Include="Modules\EmulationBasicsServicesModule.cs" />
     <Compile Include="NavigationInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\SpeedControlViewModel.cs" />
-    <Compile Include="Views\SpeedControlView.xaml.cs">
-      <DependentUpon>SpeedControlView.xaml</DependentUpon>
+    <Compile Include="ViewModels\NavigationControlViewModel.cs" />
+    <Compile Include="Views\NavigationControlView.xaml.cs">
+      <DependentUpon>NavigationControlView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Wheels\IWheel.cs" />
     <Compile Include="Wheels\VirtualWheel.cs" />
@@ -121,7 +122,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Views\SpeedControlView.xaml">
+    <Page Include="Views\NavigationControlView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
