Перелопатил код с эмуляцией в БЛОК. Не так, чтобы совсем хорошо. Но пусть

--- a/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
+++ b/MapViewer.Emulation.Blok/MapViewer.Emulation.Blok.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Emission\EmissionOptionAttribute.cs" />
     <Compile Include="Emission\IBlokEmitter.cs" />
     <Compile Include="Emission\IBlokEmitterFactory.cs" />
+    <Compile Include="Emission\Implementations\BlokEmitterFactoryBase.cs" />
     <Compile Include="Emission\Implementations\CanBlokEmitterFactory.cs" />
     <Compile Include="Emission\Implementations\CanBlokEmitter.cs" />
     <Compile Include="Emission\Implementations\UdpBlokEmitter.cs" />
