Подправил ссылку на подмодуль Can

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/NpoSaut/netMapViewControlLib.git
 [submodule "Can"]
 	path = Can
-	url = https://github.com/NpoSaut/netCanLib.git
+	url = https://git.saut.ru:443/netCanLib.git
 [submodule "InstallerTools"]
 	path = InstallerTools
 	url = https://git.nposaut.ru:443/netInstallerTools.git
